// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`final-comments GET / should render the accept appellant final comments page with the expected content 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and accept appellant final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Original final comments</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="text">Awaiting final comments review</div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value"></dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decisions</dt>
                    <dd class="govuk-summary-list__value">Accept final comments</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/appellant/"> Change</a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <button class="govuk-button" data-module="govuk-button">Accept appellant final comments</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET / should render the accept lpa final comments page with the expected content 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and accept LPA final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Original final comments</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="text">Awaiting final comments review</div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value"></dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decisions</dt>
                    <dd class="govuk-summary-list__value">Accept final comments</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/"> Change</a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <button class="govuk-button" data-module="govuk-button">Accept LPA final comments</button>
            </form>
        </div>
    </div>
</main>"
`;
